responsive body overflow fixed

--- a/compass/sass/partials/_main.sass
+++ b/compass/sass/partials/_main.sass
@@ -62,6 +62,7 @@ body
   body
     flex-direction: column
     font-size: 16px
+    overflow: auto
 
   .arrowLeft, .arrowRight
     display: none
